--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: #444;
-$secondary-color: #eece1a; //#048ec2
+$primary-color: #333;
+$secondary-color: #eece1a; //#048ec2 #eece1a
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
