--- a/scss/main.scss
+++ b/scss/main.scss
@@ -131,6 +131,32 @@ main {
     }
 }
 
+// Contact page
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div {
+        font-size: 2rem;
+        border: 3px #fff solid;
+        padding: 1.5rem 1.5rem;
+        margin-bottom: 3rem;
+        @include easeOut;
+
+        &:hover {
+            padding: 0.5rem 1rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
+            span {
+                color: $primary-color;
+            }
+        }
+    }
+}
+
 #main-footer {
     text-align: center;
     padding: 1rem;
